# CadenzaOS

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  platformio.ini
.codex/skills/generate-launcher-cover-art/: SKILL.md
.research/spikes/uac_idf/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.hardware.defaults
.research/spikes/uac_idf/src/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  idf_connectivity_adapter.cpp  idf_connectivity_adapter.h  main.cpp  t_embed_display.cpp  t_embed_display.h  t_embed_input.cpp  t_embed_input.h  t_embed_microphone.cpp  t_embed_microphone.h  t_embed_speaker.cpp  t_embed_speaker.h  tusb_config.h  uac_lifecycle_adapter.cpp  uac_lifecycle_adapter.h  usb_descriptors.c
analysis/: capability_mode.json
assets/about/: README.md  about_logo.pbm  about_logo_t_embed.pbm
assets/audio/: README.md  manifest.example.json
assets/fonts/roobert-source/: README.md  Roobert-10-Bold.fnt
assets/industrial-design/3d/: README.md  cadenza-concept-v1.3mf  cadenza-concept-v1.csg  cadenza-concept-v1.scad  cadenza-concept-v1.stl
assets/launcher-covers/: README.md  clock.pbm  clock_t_embed.pbm  gallery.pbm  gallery_t_embed.pbm  motion.pbm  motion_t_embed.pbm  settings.pbm  settings_t_embed.pbm  sight.pbm  timer.pbm  timer_t_embed.pbm
assets/music-glyphs/: README.md  sight_glyphs_sharp.pbm  sight_glyphs_t_embed.pbm
assets/timer-digits/: README.md  timer_digits_sharp.pbm  timer_digits_t_embed.pbm
cmake/: audit_activation_timer_research.cmake  audit_connectivity_research.cmake  audit_shared_sources.cmake  audit_system_overlay_research.cmake  audit_system_typography.cmake  audit_timer_naming.cmake  cadenza_apps_sources.cmake  cadenza_core_sources.cmake  verify_third_party.cmake
desktop/: main.cpp
docs/: activation-timer-baseline.md  activation-timer-implementation-report.md  activation-timer-reference-research.md  animation-numerics.md  app-handoff-reference-research.md  audio-asset-contract.md  audio-design-research.md  audio-engine-adoption-decision.md  audio-palette-calibration.md  audio-reference-research.md  bounded-text-layout.md  connectivity-capability-reference-research.md  connectivity-platform-baseline.md  connectivity-runtime-implementation.md  development.md  engine-adoption-decision.md  firmware-sdk-adoption-decision.md  launcher-card-reference-research.md  memory-budget.md  platform-architecture.md  project-vision.md  reference-research.md  sight-reading-reference-research.md  system-font-reference-research.md  system-overlay-adoption-decision.md  system-overlay-implementation-report.md  system-overlay-reference-research.md  system-services-baseline.md  system-services-reference-research.md  system-typography-migration.md  verification.md  visual-assets.md  voice-connectivity-reference-research.md  voice-input-implementation-report.md
docs/product/: hardware-concept.md
hardware/cadenza/: .gitignore  KICAD_MAIN_TOOL_DECISION.md  L1_SCREEN_ONLY_STATUS.md  PRODUCTION_READINESS.md  README.md  repair_import_semantics.py  verify_import_connectivity.py
hardware/cadenza/analysis/: L1_SCHEMATIC_DRYRUN_FEASIBILITY.md  semantic-connectivity-review.md
hardware/cadenza/electrical/: GPIO_ALLOCATION_CANDIDATE.md
hardware/cadenza/gates/: L1_CANDIDATE_NETLIST_GATE.md  L1_KICAD_CHANGE_CONTRACT.md  L1_SCHEMATIC_DELTA_CONTRACT.md  L1_SCREEN_ONLY_DELTA_CONTRACT.md  analyze_l1_pcb_sync_readiness.py  l1-change-boundary-self-check.json  l1-change-boundary.json  l1-schematic-delta-contract-self-check.json  l1-schematic-delta-contract.json  l1-screen-only-delta-contract-self-check.json  l1-screen-only-delta-contract.json  l1_change_boundary.py  normalize_imported_ground_pads.py  selftest_l1_candidate_netlist.py  verify_l1_candidate_netlist.py  verify_l1_erc_delta.py  verify_l1_pcb_only_footprints.py  verify_l1_schematic_delta_contract.py  verify_l1_screen_only_delta_contract.py
hardware/cadenza/manufacturing/: BOM_DELTA_CANDIDATE.md  JLCPCB_L1_PROFILE.md  (+2 more)
hardware/rev-a/: automation.md  bom.yaml  design.yaml  jlceda-compatibility.md  ls027b7dh01-bringup.md  research.md
include/: app_runtime.h  apps.h  board_pins.h  cadenza_t_embed_audio_contract.h  cadenza_usb_voice_contract.h  display_profile.h  i2s_audio_output.h  input.h  mono_canvas.h  serial_diagnostic_sink.h  tft_mono_canvas.h  tft_presenter.h
src/: animation_golden_probe.cpp  app_runtime.cpp  apps.cpp  i2s_audio_output.cpp  input.cpp  main.cpp  mono_canvas.cpp  tft_presenter.cpp
tests/: animation_state_machine_tests.cpp  app_context_contract_tests.cpp  app_context_test_support.h  app_handoff_allocation_tests.cpp  app_runtime_tests.cpp  app_snapshot_tests.cpp  apps_tests.cpp  audio_command_queue_tests.cpp  audio_engine_tests.cpp  audio_io_concurrency_tests.cpp  bounded_text_tests.cpp  composition_tests.cpp  connectivity_boundary_tests.cpp  core_services_tests.cpp  core_smoke.cpp  desktop_model_tests.cpp  desktop_smoke_tests.cpp  easing_tests.cpp  font_converter_tests.py  frame_animation_tests.cpp  framebuffer_tests.cpp  gallery_snapshot_tests.cpp  gallery_tests.cpp  headless_host_tests.cpp  headless_microphone_tests.cpp  i2s_audio_format_tests.cpp  i2s_audio_output_tests.cpp  input_reducer_tests.cpp  interaction_sound_tests.cpp  launcher_snapshot_tests.cpp  legacy_core_compile_probe.cpp  mono_canvas_tests.cpp  particle_tests.cpp  png_writer_tests.cpp  presentation_effects_tests.cpp  presenter_tests.cpp  recording_tests.cpp  sdl_audio_output_tests.cpp  sight_tests.cpp  simulation_controller_tests.cpp  (+15 more)
tests/data/: checker.pbm
tests/firmware_stubs/: Arduino.h  firmware_stubs.cpp  firmware_stubs.h
tests/snapshots/: app_baselines.md  gallery_baselines.md
tools/: asset-requirements.txt  cadenza_mic_selftest.swift  check.sh  convert_launcher_cover.py  convert_playdate_fonts.py  dump_headless_pbm.cpp  dump_sound_cues.cpp  export_typography_matrix.py  firmware_uac.sh  generate_sight_glyphs.py  generate_timer_digits.py  pack_bitmap.py  simulator.py  system_overlay_size_probe.cpp
(+1514 files in other folders)
